ref: notifications object

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/control-sidebar.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/control-sidebar.html.twig
@@ -16,6 +16,8 @@
     <div class="tab-content" id="control-sidebar-tab-content">
         <div class="tab-pane fade dark show active" id="control-sidebar-home-tab" role="tabpanel" aria-labelledby="control-sidebar-home-tab-label">
             <h3 class="control-sidebar-heading h4">{{ 'sidebar.tab.home.label'|trans }}</h3>
+            <ul class="control-sidebar-menu" id="activity-log">
+            </ul>
         </div>
         <div class="tab-pane fade dark" id="control-sidebar-jobs-tab" role="tabpanel" aria-labelledby="custom-tabs-two-profile-label">
             <h3 class="control-sidebar-heading h4">{{ 'sidebar.tab.jobs.label'|trans }}</h3>
