--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/toasts.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/toasts.html.twig
@@ -1,7 +1,7 @@
 {%- trans_default_domain 'elements' -%}
 
 <div aria-live="polite" aria-atomic="true" class="">
-    <div class="toast-container top-0 end-0 p-3 position-fixed">
+    <div class="toast-container top-0 end-0 p-3 position-fixed" id="toaster">
         {%- set types = {
             'error' : { 'class': 'bg-danger', 'icon': 'fa-ban' },
             'warning' : { 'class': 'bg-warning', 'icon': 'fa-warning' },
