--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/html5.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base/html5.html.twig
@@ -25,6 +25,7 @@
         {% endblock wrapper %}
         {% embed '@EMSAdminUI/bootstrap5/core/modal.html.twig' with {'id': 'ajax-modal'} %}{% endembed %}
         {% embed '@EMSAdminUI/bootstrap5/core/modal.html.twig' with {'id': 'pick-file-server-modal'} %}{% endembed %}
+        {% include '@EMSAdminUI/bootstrap5/core/out-of-sync.html.twig' %}
         <script src="{{ asset('app.js', 'emsadminui') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
