ref: template.js to action.js

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/action/form.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/action/form.html.twig
@@ -71,3 +71,7 @@
     {{ parent() }}
 
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('action.js', 'emsadminui') }}"></script>
+{% endblock %}
