ref: managed-alias.js

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/managed_alias.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/environment/managed_alias.html.twig
@@ -58,3 +58,8 @@
         {{ form_end(form) }}
     </div>
 {% endblock %}
+
+
+{% block javascripts %}
+    <script src="{{ asset('managed-alias.js', 'emsadminui') }}"></script>
+{% endblock %}
