--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/edit.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/edit.html.twig
@@ -18,3 +18,7 @@
 		actionIcon: 'fa-save'
 	} %}
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('i18n.js', 'emsadminui') }}"></script>
+{% endblock %}
