--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/hierarchical_view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/hierarchical_view.html.twig
@@ -42,3 +42,7 @@
         </div>
     </div>
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('hierarchical.js', 'emsadminui') }}"></script>
+{% endblock %}
