ref: criteria apps

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/criteria_table.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/criteria_table.html.twig
@@ -183,3 +183,7 @@
 		</div>
 	</form>
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('criteria-table.js', 'emsadminui') }}"></script>
+{% endblock %}
