--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/calendar_view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/calendar_view.html.twig
@@ -37,3 +37,7 @@
       </div>
       <!-- /.row -->
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('criteria-view.js', 'emsadminui') }}"></script>
+{% endblock %}
