--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/object-views-button.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/object-views-button.html.twig
@@ -40,7 +40,7 @@
 							{%- endif -%}
 						{% elseif template.renderOption is constant('EMS\\CoreBundle\\Form\\Field\\RenderOptionType::NOTIFICATION') %}
 							{% if ( is_granted(template.role) and ((attribute(source, contentType.circlesField) is not defined) or (source and attribute(source, contentType.circlesField)|emsco_in_my_circles) or (environment.circles|emsco_in_my_circles and is_granted('ROLE_PUBLISHER')) ) ) %}
-								<li><a href='#' class="request_notification" onclick="requestNotification(this, {{template.id}}, '{{environment.name}}', '{{contentType.id}}' , '{{ouuid}}'); return false;" href="#" data-url="{{ path('notification.ajaxnotification', {'objectId' : ouuid}) }}">
+								<li><a href='#' class="request-notification" data-template-id="{{template.id|e('html_attr')}}" data-environment-name="{{environment.name|e('html_attr')}}" data-content-type-id="{{contentType.id|e('html_attr')}}" data-ouuid="{{ouuid|e('html_attr')}}" href="#" data-url="{{ path('notification.ajaxnotification', {'objectId' : ouuid}) }}">
 									<i class="{{ template.icon|raw }}"></i>
 									{{ template.label }}
 								</a></li>
