ref: calendar.js

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/calendar_view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/calendar_view.html.twig
@@ -39,5 +39,5 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('criteria-view.js', 'emsadminui') }}"></script>
+    <script src="{{ asset('calendar.js', 'emsadminui') }}"></script>
 {% endblock %}
