--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/criteria_view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/criteria_view.html.twig
@@ -55,3 +55,7 @@
 	</div>
 </div>
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('criteria-view.js', 'emsadminui') }}"></script>
+{% endblock %}
