refactor(admin-ui): action.js (#749)
Co-authored-by: David mattei <d.mattei89@gmail.com>

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/calendar_view.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/calendar_view.html.twig
@@ -37,3 +37,7 @@
       </div>
       <!-- /.row -->
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('calendar.js', 'emsadminui') }}"></script>
+{% endblock %}
