fix: on multiple select, disable text selection

--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -230,7 +230,7 @@ div.media-lib {
           }
 
           .media-lib-item {
-            & > * { pointer-events: none; }
+            & > * { pointer-events: none; user-select: none; }
             & a { pointer-events: auto; }
 
             &:hover { background-color: var(--color-light); }
