fix: reset selection onClick

--- a/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
@@ -83,7 +83,7 @@
 
 {%- block media_lib_button_upload -%}
     <input type="file" id="media-lib-upload-{{- id -}}" class="file-uploader-input" multiple="multiple">
-    <label class="btn btn-sm btn-default" for="media-lib-upload-{{- id -}}">
+    <label class="btn btn-sm btn-default btn-file-upload" for="media-lib-upload-{{- id -}}">
         <i class="fa fa-upload"></i> {{- buttonLabel|default('media_library.file.add.title'|trans) -}}
     </label>
 {%- endblock media_lib_button_upload -%}
