--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/footer.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elements/footer.html.twig
@@ -1,7 +1,7 @@
 {%- trans_default_domain 'emsco-core' -%}
 
 <footer class="main-footer no-print">
-    {% app.user %}
+    {% if app.user %}
         <a href="https://elasticms.fgov.be/" target="_blank">elastic<strong>MS</strong></a>
         <div class="float-end d-none d-sm-inline-block">
             {{ 'core.version'|trans({ '%core%': ems_version('core'), '%symfony%': ems_version('symfony') }) }}
