--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/status.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/status.html.twig
@@ -25,7 +25,7 @@
 				</h4>
 			</div>
 
-            {% app.user %}
+            {% if app.user %}
                 <div class="card-body ">
                     <ul class="list-group">
                         {% if info is defined and info %}
@@ -92,7 +92,7 @@
 					{{ 'views.elasticsearch.status.certificate-information'|trans }}
 				</h4>
 			</div>
-            {% app.user %}
+            {% if app.user %}
                 <div class="card-body ">
                     <ul class="list-group">
                         {% if certificate %}
@@ -124,7 +124,7 @@
 						{{ 'views.elasticsearch.status.tika-server'|trans }} {% if tika and tika.code != 200 %}({{tika.code}}){% endif %}
 					</h4>
 				</div>
-                {% app.user %}
+                {% if app.user %}
                     <div class="card-body ">
                         <ul class="list-group">
                             <li class="list-group-item">
