--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/status.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/elasticsearch/status.html.twig
@@ -30,51 +30,51 @@
                     <ul class="list-group">
                         {% if info is defined and info %}
                             <li class="list-group-item">{{ 'views.elasticsearch.status.cluster-uuid'|trans }}<span
-                                class=" badge bg-{{ status.status }}">{{ info.cluster_uuid }}</span></li>
+                                class=" badge bg-{{ status.status }} float-end">{{ info.cluster_uuid }}</span></li>
                             <li class="list-group-item">{{ 'views.elasticsearch.status.tagline'|trans }}<span
-                                class=" badge bg-{{ status.status }}">{{ info.tagline }}</span></li>
+                                class=" badge bg-{{ status.status }} float-end">{{ info.tagline }}</span></li>
                             <li class="list-group-item">{{ 'views.elasticsearch.status.node-name'|trans }}<span
-                                class=" badge bg-{{ status.status }}">{{ info.name }}</span></li>
+                                class=" badge bg-{{ status.status }} float-end">{{ info.name }}</span></li>
                             <li class="list-group-item">{{ 'views.elasticsearch.status.version'|trans }}<span
-                                class=" badge bg-{{ status.status }}">{{ info.version.number }}</span></li>
+                                class=" badge bg-{{ status.status }} float-end">{{ info.version.number }}</span></li>
                             <li class="list-group-item">{{ 'views.elasticsearch.status.lucene-version'|trans }}<span
-                                class=" badge bg-{{ status.status }}">{{ info.version.lucene_version }}</span></li>
+                                class=" badge bg-{{ status.status }} float-end">{{ info.version.lucene_version }}</span></li>
                             <li class="list-group-item">{{ 'views.elasticsearch.status.build-date'|trans }}<span
-                                class=" badge bg-{{ status.status }}">{{ info.version.build_date|split('.')|first|date(date_time_format) }}</span></li>
+                                class=" badge bg-{{ status.status }} float-end">{{ info.version.build_date|split('.')|first|date(date_time_format) }}</span></li>
                         {% endif %}
                         <li class="list-group-item">Number of nodes <span
-                            class=" badge bg-{{ status.status }}">{{ status.number_of_nodes }}</span></li>
+                            class=" badge bg-{{ status.status }} float-end">{{ status.number_of_nodes }}</span></li>
                         <li class="list-group-item">Number of data nodes <span
-                            class=" badge bg-{{ status.status }}">{{
+                            class=" badge bg-{{ status.status }} float-end">{{
                                 status.number_of_data_nodes }}</span></li>
                         <li class="list-group-item">Active primary shards <span
-                            class=" badge bg-{{ status.status }}">{{
+                            class=" badge bg-{{ status.status }} float-end">{{
                                 status.active_primary_shards }}</span></li>
                         <li class="list-group-item">Active shards <span
-                            class=" badge bg-{{ status.status }}">{{ status.active_shards }}</span></li>
+                            class=" badge bg-{{ status.status }} float-end">{{ status.active_shards }}</span></li>
                         <li class="list-group-item">Relocating shards <span
-                            class=" badge bg-{{ status.status }}">{{ status.relocating_shards
+                            class=" badge bg-{{ status.status }} float-end">{{ status.relocating_shards
                                 }}</span></li>
                         <li class="list-group-item">Initializing shards <span
-                            class=" badge bg-{{ status.status }}">{{
+                            class=" badge bg-{{ status.status }} float-end">{{
                                 status.initializing_shards }}</span></li>
                         <li class="list-group-item">Unassigned shards <span
-                            class=" badge bg-{{ status.status }}">{{ status.unassigned_shards
+                            class=" badge bg-{{ status.status }} float-end">{{ status.unassigned_shards
                                 }}</span></li>
                         <li class="list-group-item">Delayed unassigned shards <span
-                            class=" badge bg-{{ status.status }}">{{
+                            class=" badge bg-{{ status.status }} float-end">{{
                                 status.delayed_unassigned_shards }}</span></li>
                         <li class="list-group-item">Number of pending tasks <span
-                            class=" badge bg-{{ status.status }}">{{
+                            class=" badge bg-{{ status.status }} float-end">{{
                                 status.number_of_pending_tasks }}</span></li>
                         <li class="list-group-item">Number of in flight fetch <span
-                            class=" badge bg-{{ status.status }}">{{
+                            class=" badge bg-{{ status.status }} float-end">{{
                                 status.number_of_in_flight_fetch }}</span></li>
                         <li class="list-group-item">Task max waiting in queue <span
-                            class=" badge bg-{{ status.status }}">{{
+                            class=" badge bg-{{ status.status }} float-end">{{
                                 status.task_max_waiting_in_queue_millis }} ms</span></li>
                         <li class="list-group-item">Active shards percent as number <span
-                            class=" badge bg-{{ status.status }}">{{
+                            class=" badge bg-{{ status.status }} float-end">{{
                                 status.active_shards_percent_as_number }}</span></li>
 
                     </ul>
@@ -98,7 +98,7 @@
                         {% if certificate %}
                             <li class="list-group-item">
                                 {{ 'views.elasticsearch.status.bits'|trans }}
-                                <span class=" badge bg-green">{{ certificate.bits }}</span>
+                                <span class=" badge bg-green float-end">{{ certificate.bits }}</span>
                             </li>
                             <li class="list-group-item">
                                 <a href="{{ path('ems_get_public_key') }}">{{ 'views.elasticsearch.status.public-key'|trans }}</a>
