--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-revision.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-revision.html.twig
@@ -63,7 +63,7 @@
 					'btnType': 'outline-danger',
 					'label': 'views.data.edit-revision-html.discard-draft-label'|trans,
 					'icon': 'trash',
-					'group_class': 'pull-right',
+					'group_class': 'float-end',
 				}%}
 			{% endif %}
 		</div>
