--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/filter/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/filter/index.html.twig
@@ -21,7 +21,7 @@
 			<div class="box-header with-border">
 				<i class="fa fa-users"></i>
 				<h3 class="box-title">{{ 'Filters'|trans }}</h3>
-				<a class="btn btn-xs btn-primary pull-right" href="{{ path('ems_filter_add') }}">
+				<a class="btn btn-xs btn-primary float-end" href="{{ path('ems_filter_add') }}">
 					<i class="fa fa-plus"></i> {{ 'Add a Filter'|trans }}
 				</a>
 			</div>
