--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/forms.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/form/forms.html.twig
@@ -246,7 +246,7 @@
                     'btnType': action.buttonType,
                     'itemLabel': attribute(line.data, table.labelAttribute),
                     'icon': action.icon,
-                    'group_class': loop.last ? 'pull-right' : '',
+                    'group_class': loop.last ? 'float-end' : '',
                 }%}
             {% endif %}
         {% else %}
