--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/form.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/i18n/form.html.twig
@@ -2,7 +2,7 @@
 	<div class="box">
 		<div class="box-header with-border">
 			<i class="fa fa-language"></i><h3 class="box-title">{{ title|trans }}</h3>
-			<div class="btn-group  pull-right">
+			<div class="btn-group  float-end">
 				<a class="btn-add btn btn-xs btn-success"
 					data-bs-target="i18n-bs-content"><i class="fa fa-plus-square"></i>
 					{{ 'Translation' }}</a>
