--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/job/index.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/job/index.html.twig
@@ -12,7 +12,7 @@
 			<div class="box-header with-border">
 				<i class="fa fa-database"></i>
 				<h3 class="box-title">Jobs</h3>
-				<div class="btn-group  pull-right">
+				<div class="btn-group  float-end">
                     {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
 						'url':  path('job.add'),
 						'label': 'New job',
