--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/revision/task/dashboard.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/revision/task/dashboard.html.twig
@@ -25,7 +25,7 @@
                 </li>
             {% endfor %}
             {% if filterForm is defined %}
-                <li class="pull-right">
+                <li class="float-end">
                     <div>
                         <a class="btn btn-sm btn-primary" role="button" data-bs-toggle="collapse" href="#filters" aria-expanded="{{ showFilters ? 'true' : 'false' }}" aria-controls="filters">
                             <i class="fa fa-filter" aria-hidden="true"></i> {{ 'task.filters'|trans }}
