--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/base.html.twig
@@ -115,7 +115,7 @@
                 <div class="pull-left">
                   <a href="{{ path(routes.USER_PROFILE) }}" class="btn btn-default btn-flat">{{ 'user.profile.title'|trans({}, 'emsco-user') }}</a>
                 </div>
-                <div class="pull-right">
+                <div class="float-end">
                		{% if is_granted('IS_IMPERSONATOR') %}
                			<a href="{{ path('emsco_user_index', {'_switch_user': '_exit'}) }}" class="btn btn-default btn-flat">{{ 'user.logout.exit'|trans({}, 'emsco-user') }}</a>
                		{% else %}
