--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/entity/list-entities.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/entity/list-entities.html.twig
@@ -3,7 +3,7 @@
 	<div class="box-header with-border">
 		<i class="{{ icon }}"></i>
 		<h3 class="box-title">{{ title }}</h3>
-		<div class="btn-group  pull-right">
+		<div class="btn-group  float-end">
 			<a class="btn btn-xs btn-primary" href="{{ path(add_route) }}"><i class="fa fa-plus"></i> {{ add_label }}</a>
 		</div>
 	</div>
@@ -15,7 +15,7 @@
 				{% for entity in entities %}
 					<li id="{{ entity.id }}" class="mjs-nested-sortable-no-nesting mjs-nestedSortable-leaf">
         				<div class="box-header ui-sortable-handle">
-							<div class="pull-right box-tools ui-sortable-handle">
+							<div class="float-end box-tools ui-sortable-handle">
 								<div class="btn-group">
                                     {% include '@EMSAdminUI/bootstrap5/elements/get-button.html.twig' with {
 										'url':  path(edit_route, {'id': entity.id}),
