--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/macros/data-field-type.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/macros/data-field-type.html.twig
@@ -250,7 +250,7 @@
                 {% endif %}
                 {% if emsco_is_super() %}({{ dataField.fieldType.name }}){% endif %}
                 {% if collapsible %}
-                    <div class="pull-right">
+                    <div class="float-end">
                         <div class="btn-group toggle-group" role="group">
                             <button type="button" title="collapse" aria-expanded="false" class="btn btn-sm button-collapse"></button>
                             <button type="button" title="collapse all" aria-expanded="false" class="btn btn-sm button-collapse-all"></button>
@@ -284,7 +284,7 @@
                                 #{{ idx+1 }}
 
                                 {% if collapsible %}
-                                    <div class="pull-right">
+                                    <div class="float-end">
                                         <div class="btn-group" role="group">
                                             <button type="button" title="collapse" aria-expanded="false" class="btn btn-sm button-collapse"></button>
                                         </div>
