--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inbox.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/notification/inbox.html.twig
@@ -18,7 +18,7 @@
 						<span class="badge badge-primary">{{ countPending }}</span>
 					</a></li>
 				{% endif %}
-				<li class="pull-right">
+				<li class="float-end">
 					{% include '@EMSAdminUI/bootstrap5/elements/pagination.html.twig' with {
 						'lastPage': lastPage,
 						'currentPage': page,
