--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/criteria_table.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/view/custom/criteria_table.html.twig
@@ -49,7 +49,7 @@
 				{% endif %}
 				</h3>
 
-				<div class="btn-group  pull-right">
+				<div class="btn-group  float-end">
                     {% include '@EMSAdminUI/bootstrap5/elements/post-button.html.twig' with {
 						'url': app.request.requestUri,
 						'label': 'Update filters',
