--- a/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
@@ -11,6 +11,8 @@
         {%- if mediaFile is defined -%}
             {{- template.block('media_lib_button_file_rename', _context)|raw -}}
             {{- template.block('media_lib_button_file_delete', _context)|raw -}}
+        {%- elseif selectionFiles > 0 -%}
+            {{- template.block('media_lib_button_files_delete', _context)|raw -}}
         {%- elseif mediaFolder is defined -%}
             {{- template.block('media_lib_button_folder_delete', _context)|raw -}}
             {{- template.block('media_lib_button_folder_rename', _context)|raw -}}
@@ -80,6 +82,12 @@
         <i class="fa fa-remove" aria-hidden="true"></i> {{- buttonLabel|default('media_library.file.delete.title'|trans) -}}
     </button>
 {%- endblock media_lib_button_file_delete -%}
+
+{%- block media_lib_button_files_delete -%}
+    <button class="btn btn-sm btn-default btn-files-delete">
+        <i class="fa fa-remove" aria-hidden="true"></i> {{- buttonLabel|default('media_library.files.delete.title'|trans({ '%count%': selectionFiles })) -}}
+    </button>
+{%- endblock media_lib_button_files_delete -%}
 
 {%- block media_lib_button_upload -%}
     <label class="btn btn-sm btn-default btn-file-upload" for="media-lib-upload-{{- id -}}">
