--- a/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
+++ b/EMS/core-bundle/src/Resources/views/components/media_library/template.twig
@@ -84,7 +84,7 @@
 {%- endblock media_lib_button_file_delete -%}
 
 {%- block media_lib_button_files_delete -%}
-    <button class="btn btn-sm btn-default btn-files-delete">
+    <button class="btn btn-sm btn-default btn-files-delete" data-modal-size="md">
         <i class="fa fa-remove" aria-hidden="true"></i> {{- buttonLabel|default('media_library.files.delete.title'|trans({ '%count%': selectionFiles })) -}}
     </button>
 {%- endblock media_lib_button_files_delete -%}
@@ -114,6 +114,12 @@
 {%- endblock media_lib_modal_title -%}
 
 {%- block media_lib_modal_body -%}
+    {% if confirmMessage is defined %}
+        <div class="alert alert-warning" role="alert">{{ confirmMessage|nl2br }}</div>
+    {% endif %}
+    {% if infoMessage is defined %}
+        <div class="alert alert-info" role="alert">{{ infoMessage|nl2br }}</div>
+    {% endif %}
     {%- if form is defined -%}
         {{- form(form) -}}
     {%- endif -%}
@@ -130,7 +136,3 @@
         <button type="button" class="btn btn-sm btn-default" data-dismiss="modal">{{ 'media_library.cancel'|trans }}</button>
     </div>
 {%- endblock media_lib_modal_footer -%}
-
-
-
-
