ref: edit-revision.js

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-revision.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/data/edit-revision.html.twig
@@ -71,3 +71,7 @@
 </div>
 
 {% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('edit-revision.js', 'emsadminui') }}"></script>
+{% endblock %}
