--- a/demo/skeleton/template_ems/dashboard/media_library.twig
+++ b/demo/skeleton/template_ems/dashboard/media_library.twig
@@ -2,6 +2,7 @@
     {{ component('media_library', {
         'id': 'examaple-media-lib',
         'template': _self,
+        'searchSize': 20,
     }) }}
 {% endblock body %}
 
@@ -11,19 +12,23 @@
 
 {%- block media_lib_file_row_header -%}
     <li>
-        <div>Name</div>
-        <div>Type</div>
-        <div>Revision</div>
-        <div class="text-right">Size</div>
+        <div class="media-lib-item-container">
+            <div>Name</div>
+            <div>Type</div>
+            <div>Revision</div>
+            <div class="text-right">Size</div>
+        </div>
     </li>
 {%- endblock media_lib_file_row_header -%}
 
 {%- block media_lib_file_row -%}
     <li class="media-lib-item" data-id="{{- mediaFile.id -}}">
-        <div><a href="{{- mediaFile.urlView -}}" download="{{- mediaFile.name -}}" data-ems-id="{{- mediaFile.emsId -}}">{{- mediaFile.name -}}</a></div>
-        <div>{{- mediaFile.file.mimetype|trans({}, 'emsco-mimetypes') -}}</div>
-        <div><a href="{{ path('emsco_view_revisions', { 'type': mediaFile.document.contentType, 'ouuid': mediaFile.id  }) }}">show revision</a></div>
-        <div class="text-right">{{- mediaFile.file.filesize|format_bytes -}}</div>
+        <div class="media-lib-item-container">
+            <div><a href="{{- mediaFile.urlView -}}" download="{{- mediaFile.name -}}" data-ems-id="{{- mediaFile.emsId -}}">{{- mediaFile.name -}}</a></div>
+            <div>{{- mediaFile.file.mimetype|trans({}, 'emsco-mimetypes') -}}</div>
+            <div><a href="{{ path('emsco_view_revisions', { 'type': mediaFile.document.contentType, 'ouuid': mediaFile.id  }) }}">show revision</a></div>
+            <div class="text-right">{{- mediaFile.file.filesize|format_bytes -}}</div>
+        </div>
     </li>
 {%- endblock media_lib_file_row -%}
 
