remove searchSize, use default in demo

--- a/demo/skeleton/template_ems/dashboard/media_library.twig
+++ b/demo/skeleton/template_ems/dashboard/media_library.twig
@@ -1,8 +1,7 @@
 {% block body %}
     {{ component('media_library', {
         'id': 'examaple-media-lib',
-        'template': _self,
-        'searchSize': 20,
+        'template': _self
     }) }}
 {% endblock body %}
 
