--- a/EMS/core-bundle/assets/css/component/media_library.scss
+++ b/EMS/core-bundle/assets/css/component/media_library.scss
@@ -1,8 +1,9 @@
 div.media-lib {
   --color-light: #F8F8F8;
   --color-dark: #333333;
+  --color-active: #00A7E2;
+  --color-active-light: #e2f7ff;
   --color-border: #d7d7d7;
-  --color-border-active: #00A7E2;
 
   display: flex;
   flex-direction: column;
@@ -186,8 +187,8 @@ div.media-lib {
         height: 100%;
 
         &.media-lib-drop-area {
-            border: 2px solid var(--color-border-active);
-            background-color:  rgb(0, 167, 226, 0.1);
+            border: 1px solid var(--color-active);
+            background-color: var(--color-active-light);
         }
 
         ul.media-lib-list-uploads {
@@ -213,28 +214,29 @@ div.media-lib {
           flex-direction: column;
 
           li {
-            &:first-child {
-              font-weight: bold;
-            }
-
-            padding: 8px 16px;
             border-bottom: 1px dashed var(--color-border);
-            display: flex;
-            flex-wrap: nowrap;
 
-            a:hover {
-              text-decoration: underline;
+            &:first-child { font-weight: bold; }
+            a:hover { text-decoration: underline; }
+
+            &.media-lib-item {
+              & > * { pointer-events: none; user-select: none; }
+              & a { pointer-events: auto; }
+
+              &:hover { background-color: var(--color-light); }
+              &.active > div.media-lib-item-container {
+                border: 1px solid var(--color-active);
+                background-color: var(--color-active-light);
+              }
             }
 
-            > div { flex: 1; }
-          }
-
-          .media-lib-item {
-            & > * { pointer-events: none; }
-            & a { pointer-events: auto; }
-
-            &:hover { background-color: var(--color-light); }
-            &.active { border: 2px solid var(--color-border-active); }
+            div.media-lib-item-container {
+              display: flex;
+              flex-wrap: nowrap;
+              padding: 7px 16px;
+              border: 1px solid transparent;
+              > div { flex: 1; }
+            }
           }
         }
       }
