fix(admin-ui): still reference template @EMSCore

--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/release/add.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/release/add.html.twig
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block body %}
-    {% include "@EMSCore/release/form.html.twig" with {
+    {% include "@EMSAdminUI/bootstrap5/release/form.html.twig" with {
     	label: 'release.add.title',
     } %}
 {% endblock %}
