--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/add.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/channel/add.html.twig
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block body %}
-    {% include "@EMSCore/channel/form.html.twig" with {
+    {% include "@EMSAdminUI/bootstrap5/channel/form.html.twig" with {
     	label: 'channel.add.title',
 		save_action_key: 'channel.add.save',
     } %}
